--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 streamlit==1.32.0
-av==12.0.0
+av==11.0.0
 numpy==1.26.4
 soundfile==0.12.1
 scipy==1.13.0
 noisereduce==2.0.0
 pydub==0.25.1
 faster-whisper==0.10.0
-pyav==12.0.0
+ffmpeg-python==0.2.0
